# pyUPSTIlatex

./: .gitignore  @parametres.pyUPSTIlatex.yaml  README.md  TODO.md  pyUPSTIlatex.json  pyproject.toml
custom/: README.md  pyUPSTIlatex.json
integration/: README.md
integration/commandes_windows/: pyUPSTIlatex_compilation.cmd  pyUPSTIlatex_poly.cmd  pyUPSTIlatex_poly_td.cmd
integration/yaml/: @parametres.pyUPSTIlatex.yaml
latex/UPSTI_Document/: README.md
latex/upsti-latex/: README.md
pyupstilatex/: __init__.py  accessibilite.py  cli.py  config.py  document.py  exceptions.py  file_helpers.py  file_latex_helpers.py  file_system.py  filesystem.py  handlers.py  init.py  logger.py  main.py  parsers.py  pyUPSTIlatex.json  storage.py  utils.py
pyupstilatex/config/: README.md  config.default.toml  pyUPSTIlatex.json
templates/latex/: base.tex.j2
templates/latex/UPSTI_Document/: page_de_garde_poly.tex.j2
templates/latex/UPSTI_Document/poly/: page_de_garde-contenu_document.tex.j2  page_de_garde-preambule_document.tex.j2
templates/yaml/: parametres_compilation_rapide.yaml.j2  poly.yaml.j2
tests/: test_document.py  test_handlers.py  test_parsers.py
