[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyUPSTIlatex"
version = "2.0.0"
description = "Utilitaire pour lire, parser et éditer des fichiers upsti-latex (compatible aussi avec UPSTI_Document)"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
keywords = ["latex", "upsti", "education", "document", "parser"]
authors = [{name = "Emmanuel Bigeard", email = "s2i@bigeard.me"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
	"PyYAML>=6.0",
	"regex>=2023.8.8",
	"click>=8.0",
	"python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ebigeard/pyUPSTIlatex"
Repository = "https://github.com/ebigeard/pyUPSTIlatex"
Issues = "https://github.com/ebigeard/pyUPSTIlatex/issues"

[project.scripts]
pyUPSTIlatex = "pyupstilatex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyupstilatex*"]
exclude = ["tests*", "work*", "custom*", "templates*", "integration*"]

[tool.setuptools.package-data]
pyupstilatex = ["pyUPSTIlatex.json"]
"*" = ["*.yaml", "*.yml", "*.tex", "*.template"]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # conflit avec Black sur les slices
    "W503",  # conflit avec Black sur les opérateurs binaires
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
fix = true

[tool.djlint]
profile = "django"
indent = 4
format_css = true
format_js = true
ignore = "H006,H021"